[project]
name = "nmap-service"
version = "0.1.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "sqlmodel (>=0.0.37,<0.0.38)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "python-json-logger (>=4.0.0,<5.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]

[tool.poetry]
packages = [{include = "nmap_service", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "invoke (>=2.2.1,<3.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "black (>=26.3.0,<27.0.0)",
    "commitizen (>=4.13.9,<5.0.0)",
    "autoflake (>=2.3.3,<3.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]


[tool.autoflake]
expand-star-imports = true
remove-all-unused-imports = true
recursive = true
remove-unused-variables = true
in-place = true

[tool.isort]
profile = "black"
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
no_lines_before = "LOCALFOLDER"
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88


[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "semver"
bump_message = "chore(release): bump version $current_version → $new_version"
update_changelog_on_bump = true
version="0.1.1"
changelog_file = "CHANGELOG.md"
changelog_incremental = true
version_files = [
    "pyproject.toml:^version",
    "src/nmap_service/core/constants.py:APP_VERSION"
]